solution step 2 and step 3